--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@
     <string name="notification_setting">Notification Setting</string>
     <string name="about_app">About App</string>
     <string name="setting_title">Setting</string>
-    <string name="about_title">About App</string>
     <string name="abount_message">lorem ipsum blablabla</string>
+    <string name="foreground_notification_message">Keuanganku Service is running</string>
+    <string name="about_title">About App</string>
 </resources>
